force-app/main/default/objects/PaymentRequest__c/PaymentRequest__c.object-meta.xml
<CustomObject>
    <label>TRX Plan</label>
    <nameField>
        <displayFormat>PR-{000000}</displayFormat>
        <label>PAYMENT REQUEST ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TRX Plan</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>