force-app/main/default/objects/PaymentRequest__c/fields/ACCOUNTANT__c.field-meta.xml
<CustomField>
    <fullName>ACCOUNTANT__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ACCOUNTANT</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accoutant</relationshipName>
    <type>Lookup</type>
</CustomField>