force-app/main/default/objects/PaymentRequest__c/fields/ActualAmountforCollectionFCY__c.field-meta.xml
<CustomField>
    <fullName>ActualAmountforCollectionFCY__c</fullName>
    <label>Actual Amount for Collection(FCY)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>