force-app/main/default/objects/PaymentRequest__c/fields/ActualAmountforCollectionLocal__c.field-meta.xml
<CustomField>
    <fullName>ActualAmountforCollectionLocal__c</fullName>
    <label>Actual Amount for Collection(Local)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>