force-app/main/default/objects/PaymentRequest__c/fields/ActualAmountforPaymentFCY__c.field-meta.xml
<CustomField>
    <fullName>ActualAmountforPaymentFCY__c</fullName>
    <label>Actual Amount for Payment(FCY)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>