force-app/main/default/objects/PaymentRequest__c/fields/ActualAmountPaidLocal__c.field-meta.xml
<CustomField>
    <fullName>ActualAmountPaidLocal__c</fullName>
    <label>Actual Amount Paid(Local)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>