force-app/main/default/objects/PaymentRequest__c/fields/ActualReturnedDate__c.field-meta.xml
<CustomField>
    <fullName>ActualReturnedDate__c</fullName>
    <label>ACTUAL RETURNED DATE</label>
    <type>Date</type>
</CustomField>