force-app/main/default/objects/PaymentRequest__c/fields/AdditionalAmountPay__c.field-meta.xml
<CustomField>
    <fullName>AdditionalAmountPay__c</fullName>
    <label>Additional Amount Pay to Staff(Local)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>