force-app/main/default/objects/PaymentRequest__c/fields/AmountLocal__c.field-meta.xml
<CustomField>
    <fullName>AmountLocal__c</fullName>
    <label>AMOUNT(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>