force-app/main/default/objects/PaymentRequest__c/fields/AmountLocalForCollection__c.field-meta.xml
<CustomField>
    <fullName>AmountLocalForCollection__c</fullName>
    <label>AMOUNT(LOCAL) FOR COLLECTION</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>