force-app/main/default/objects/PaymentRequest__c/fields/AmountPaidFCYBankRollup__c.field-meta.xml
<CustomField>
    <fullName>AmountPaidFCYBankRollup__c</fullName>
    <label>Amount Paid(FCY)-Bank Rollup</label>
    <summarizedField>PayReqBank__c.AmountPaidFCYforTrxPlan__c</summarizedField>
    <summaryForeignKey>PayReqBank__c.PaymentRequestID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>