force-app/main/default/objects/PaymentRequest__c/fields/AmountPaidFCYCashRollup__c.field-meta.xml
<CustomField>
    <fullName>AmountPaidFCYCashRollup__c</fullName>
    <label>Amount Paid(FCY)-Cash Rollup</label>
    <summarizedField>PayReqCash__c.AmountPaidFCYforTrxPlan__c</summarizedField>
    <summaryForeignKey>PayReqCash__c.PaymentRequestID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>