force-app/main/default/objects/PaymentRequest__c/fields/AmountPaidLocalBankRollup__c.field-meta.xml
<CustomField>
    <fullName>AmountPaidLocalBankRollup__c</fullName>
    <label>Amount Paid(Local)-Bank Rollup</label>
    <summarizedField>PayReqBank__c.AmountPaidLocalforTrxPlan__c</summarizedField>
    <summaryForeignKey>PayReqBank__c.PaymentRequestID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>