force-app/main/default/objects/PaymentRequest__c/fields/AmountPaidLocalCashRollup__c.field-meta.xml
<CustomField>
    <fullName>AmountPaidLocalCashRollup__c</fullName>
    <label>Amount Paid(Local)-Cash Rollup</label>
    <summarizedField>PayReqCash__c.AmountPaidLocalforTrxPlan__c</summarizedField>
    <summaryForeignKey>PayReqCash__c.PaymentRequestID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>