force-app/main/default/objects/PaymentRequest__c/fields/AmountPayTextUSD__c.field-meta.xml
<CustomField>
    <fullName>AmountPayTextUSD__c</fullName>
    <label>AMOUNT FOR PAYMENT-TEXT(FCY)</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>