force-app/main/default/objects/PaymentRequest__c/fields/AmountReceivedFCYBankRollup__c.field-meta.xml
<CustomField>
    <fullName>AmountReceivedFCYBankRollup__c</fullName>
    <label>Amount Received(FCY)-Bank Rollup</label>
    <summarizedField>PayReqBank__c.AmountReceivedFCYforTrxPlan__c</summarizedField>
    <summaryForeignKey>PayReqBank__c.PaymentRequestID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>