force-app/main/default/objects/PaymentRequest__c/fields/AmountReceivedFCYCashRollup__c.field-meta.xml
<CustomField>
    <fullName>AmountReceivedFCYCashRollup__c</fullName>
    <label>Amount Received(FCY)-Cash Rollup</label>
    <summarizedField>PayReqCash__c.AmountReceivedFCYforTrx_Plan__c</summarizedField>
    <summaryForeignKey>PayReqCash__c.PaymentRequestID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>