force-app/main/default/objects/PaymentRequest__c/fields/AmountReceivedLocalBankRollup__c.field-meta.xml
<CustomField>
    <fullName>AmountReceivedLocalBankRollup__c</fullName>
    <label>Amount Received(Local)-Bank Rollup</label>
    <summarizedField>PayReqBank__c.AmountReceivedLocalforTrxPlan__c</summarizedField>
    <summaryForeignKey>PayReqBank__c.PaymentRequestID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>