force-app/main/default/objects/PaymentRequest__c/fields/AmountReceivedLocalCashRollup__c.field-meta.xml
<CustomField>
    <fullName>AmountReceivedLocalCashRollup__c</fullName>
    <label>Amount Received(Local)-Cash Rollup</label>
    <summarizedField>PayReqCash__c.AmountReceivedLocalforTrx_Plan__c</summarizedField>
    <summaryForeignKey>PayReqCash__c.PaymentRequestID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>