force-app/main/default/objects/PaymentRequest__c/fields/AmountUSD__c.field-meta.xml
<CustomField>
    <fullName>AmountUSD__c</fullName>
    <label>AMOUNT(USD)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>