force-app/main/default/objects/PaymentRequest__c/fields/AmountUSDForCollection__c.field-meta.xml
<CustomField>
    <fullName>AmountUSDForCollection__c</fullName>
    <label>AMOUNT(USD) FOR COLLECTION</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>