force-app/main/default/objects/PaymentRequest__c/fields/AutoConnectSourceToTransaction__c.field-meta.xml
<CustomField>
    <fullName>AutoConnectSourceToTransaction__c</fullName>
    <label>AUTO-CONNECT SOURCES TO TRANSACTION</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RecordCreationStatus</valueSetName>
    </valueSet>
</CustomField>