force-app/main/default/objects/PaymentRequest__c/fields/AvailableAmountAfterDeductFCY__c.field-meta.xml
<CustomField>
    <fullName>AvailableAmountAfterDeductFCY__c</fullName>
    <formula>BalAdvanceCashFCY__c - AmountAdvancedPaidFCY__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available Amount after Deduct(FCY)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>