force-app/main/default/objects/PaymentRequest__c/fields/BalAdvanceCash__c.field-meta.xml
<CustomField>
    <fullName>BalAdvanceCash__c</fullName>
    <formula>CashAdvanceID__r.BalAdvanceCash__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance of Advance Cash</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>