force-app/main/default/objects/PaymentRequest__c/fields/BankID__c.field-meta.xml
<CustomField>
    <fullName>BankID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BANK ID</label>
    <referenceTo>BankTransaction__c</referenceTo>
    <relationshipLabel>TRX PLAN</relationshipLabel>
    <relationshipName>TrxPlanBank</relationshipName>
    <type>Lookup</type>
</CustomField>