force-app/main/default/objects/PaymentRequest__c/fields/CashAdvanceID__c.field-meta.xml
<CustomField>
    <fullName>CashAdvanceID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cash Advance ID</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>$Source.InternalUser__c</field>
            <operation>equals</operation>
            <valueField>CashAdvance__c.InternalRequester__c</valueField>
        </filterItems>
        <filterItems>
            <field>$Source.ExternalRequester__c</field>
            <operation>equals</operation>
            <valueField>CashAdvance__c.ExternalRequester__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>CashAdvance__c</referenceTo>
    <relationshipLabel>TRX PLAN-ADVANCE REQUEST</relationshipLabel>
    <relationshipName>TrxPlan</relationshipName>
    <type>Lookup</type>
</CustomField>