force-app/main/default/objects/PaymentRequest__c/fields/CashID__c.field-meta.xml
<CustomField>
    <fullName>CashID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CASH ID</label>
    <referenceTo>CASH_BOOK__c</referenceTo>
    <relationshipLabel>TRX PLAN</relationshipLabel>
    <relationshipName>TrxPlanCash</relationshipName>
    <type>Lookup</type>
</CustomField>