force-app/main/default/objects/PaymentRequest__c/fields/CostType__c.field-meta.xml
<CustomField>
    <fullName>CostType__c</fullName>
    <label>COST TYPE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CostType</valueSetName>
    </valueSet>
</CustomField>