force-app/main/default/objects/PaymentRequest__c/fields/CreditBankBranchName__c.field-meta.xml
<CustomField>
    <fullName>CreditBankBranchName__c</fullName>
    <label>CREDIT BANK/BRANCH NAME</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>