force-app/main/default/objects/PaymentRequest__c/fields/DebitAC__c.field-meta.xml
<CustomField>
    <fullName>DebitAC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DEBIT A/C</label>
    <referenceTo>BankAccount__c</referenceTo>
    <relationshipLabel>PAYMENT REQUEST</relationshipLabel>
    <relationshipName>DebitAC</relationshipName>
    <type>Lookup</type>
</CustomField>