force-app/main/default/objects/PaymentRequest__c/fields/DepositOffsetID__c.field-meta.xml
<CustomField>
    <fullName>DepositOffsetID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DEPOSIT OFFSET ID</label>
    <referenceTo>DepositOffset__c</referenceTo>
    <relationshipLabel>TRX PLAN</relationshipLabel>
    <relationshipName>TranPlanDepOffsID</relationshipName>
    <type>Lookup</type>
</CustomField>