force-app/main/default/objects/PaymentRequest__c/fields/DifferenceLeftFCY__c.field-meta.xml
<CustomField>
    <fullName>DifferenceLeftFCY__c</fullName>
    <formula>ExpectedReturnAmountFCY__c - ReturnedAmountFCY__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Difference Left(FCY)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>