force-app/main/default/objects/PaymentRequest__c/fields/ExpectedReturnAmountFCY__c.field-meta.xml
<CustomField>
    <fullName>ExpectedReturnAmountFCY__c</fullName>
    <label>Expected Return Amount(FCY)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>