force-app/main/default/objects/PaymentRequest__c/fields/ExternalRequester__c.field-meta.xml
<CustomField>
    <fullName>ExternalRequester__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EXTERNAL REQUESTER</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>PAYMENT REQUEST</relationshipLabel>
    <relationshipName>PaymentRequester</relationshipName>
    <type>Lookup</type>
</CustomField>