force-app/main/default/objects/PaymentRequest__c/fields/ExternalRequesterManager__c.field-meta.xml
<CustomField>
    <fullName>ExternalRequesterManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EXTERNAL REQUESTER MANAGER</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>TRX PLAN (EXTERNAL REQUESTER MANAGER)</relationshipLabel>
    <relationshipName>TrxPlanExternalReqManager</relationshipName>
    <type>Lookup</type>
</CustomField>