force-app/main/default/objects/PaymentRequest__c/fields/HowToConnectSourceToTrx__c.field-meta.xml
<CustomField>
    <fullName>HowToConnectSourceToTrx__c</fullName>
    <label>HOW TO CONNECT SOURCE TO TRX PLAN</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HowToConnectSourceToTrx</valueSetName>
    </valueSet>
</CustomField>