force-app/main/default/objects/PaymentRequest__c/fields/InvoiceTo__c.field-meta.xml
<CustomField>
    <fullName>InvoiceTo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice To</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>TRX PLAN (INVOICE TO)</relationshipLabel>
    <relationshipName>TrxPlanInvoiceTo</relationshipName>
    <type>Lookup</type>
</CustomField>