force-app/main/default/objects/PaymentRequest__c/fields/LiquidationTargetMaxNoDays__c.field-meta.xml
<CustomField>
    <fullName>LiquidationTargetMaxNoDays__c</fullName>
    <formula>CashAdvanceID__r.LiquidationTargetMaxNoDays__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>#NAME?</inlineHelpText>
    <label>Liquidation Target-Max No of Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>