force-app/main/default/objects/PaymentRequest__c/fields/mm_CompanyLogo__c.field-meta.xml
<CustomField>
    <fullName>mm_CompanyLogo__c</fullName>
    <formula>$Setup.Site_Custom_Settings__c.Logo_URL__c</formula>
    <label>Mail Merge Company Logo</label>
    <type>Text</type>
</CustomField>