force-app/main/default/objects/PaymentRequest__c/fields/mm_DebitACBankName__c.field-meta.xml
<CustomField>
    <fullName>mm_DebitACBankName__c</fullName>
    <formula>DebitAC__r.BankOfficialName__c</formula>
    <label>Debit A/C Bank Name</label>
    <type>Text</type>
</CustomField>