force-app/main/default/objects/PaymentRequest__c/fields/NoOfDaysAfterCreated__c.field-meta.xml
<CustomField>
    <fullName>NoOfDaysAfterCreated__c</fullName>
    <formula>DATEVALUE( NOW()) -  PlannedProcessingDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No of Days after Created</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>