force-app/main/default/objects/PaymentRequest__c/fields/NotesinDocument__c.field-meta.xml
<CustomField>
    <fullName>NotesinDocument__c</fullName>
    <label>Notes in Document</label>
    <type>TextArea</type>
</CustomField>