force-app/main/default/objects/PaymentRequest__c/fields/OffseRemainedSellingAmountFCY__c.field-meta.xml
<CustomField>
    <fullName>OffseRemainedSellingAmountFCY__c</fullName>
    <formula>IF(OffsetRequestedAmountFCY__c &lt;&gt; 0, OffsetRequestedAmountFCY__c -  RUOffsetProcessedSellingAmountFCY__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Offset Remained Selling Amount(FCY)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>