force-app/main/default/objects/PaymentRequest__c/fields/OffsetProcessPayableTrxOut__c.field-meta.xml
<CustomField>
    <fullName>OffsetProcessPayableTrxOut__c</fullName>
    <label>Offset Process Payable-Trx Out</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RECEIVABLE_PAYABLE_PROCESSING</valueSetName>
    </valueSet>
</CustomField>