force-app/main/default/objects/PaymentRequest__c/fields/OffsetProcessReceivableTrxIn__c.field-meta.xml
<CustomField>
    <fullName>OffsetProcessReceivableTrxIn__c</fullName>
    <label>Offset Process Receivable-Trx In</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RECEIVABLE_PAYABLE_PROCESSING</valueSetName>
    </valueSet>
</CustomField>