force-app/main/default/objects/PaymentRequest__c/fields/OffsetRemainedBuyingAmountFCY__c.field-meta.xml
<CustomField>
    <fullName>OffsetRemainedBuyingAmountFCY__c</fullName>
    <formula>IF(OffsetRequestedAmountFCY__c  &lt;&gt; 0, OffsetRequestedAmountFCY__c -  RUOffsetProcessedBuyingAmountFCY__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Offset Remained Buying Amount(FCY)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>