force-app/main/default/objects/PaymentRequest__c/fields/OffsetRemainedBuyingAmountLocal__c.field-meta.xml
<CustomField>
    <fullName>OffsetRemainedBuyingAmountLocal__c</fullName>
    <formula>IF(OffsetRequestedAmountLocal__c  &lt;&gt;  0, OffsetRequestedAmountLocal__c -  RUOffsetProcessedBuyingAmountLocal__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Offset Remained Buying Amount(Local)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>