force-app/main/default/objects/PaymentRequest__c/fields/OffsetRequestedAmountFCY__c.field-meta.xml
<CustomField>
    <fullName>OffsetRequestedAmountFCY__c</fullName>
    <formula>MIN(RollupFMSUnpaidBalOfBuyingUSD__c,RollupFMSUnreceivedBalOfSellUSD__c)</formula>
    <label>Offset Requested Amount(FCY)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>