force-app/main/default/objects/PaymentRequest__c/fields/OffsetRequestedAmountLocal__c.field-meta.xml
<CustomField>
    <fullName>OffsetRequestedAmountLocal__c</fullName>
    <formula>MIN(RollupFMSUnpaidBalOfBuyingLocal__c,RollupFMSUnreceivedBalOfSellLocal__c)</formula>
    <label>Offset Requested Amount(Local)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>