force-app/main/default/objects/PaymentRequest__c/fields/PayableCompleted__c.field-meta.xml
<CustomField>
    <fullName>PayableCompleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payable Completed</label>
    <type>Checkbox</type>
</CustomField>