force-app/main/default/objects/PaymentRequest__c/fields/PaymentConfirmedTrxOut__c.field-meta.xml
<CustomField>
    <fullName>PaymentConfirmedTrxOut__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payment Confirmed-Trx Out</label>
    <type>Checkbox</type>
</CustomField>