force-app/main/default/objects/PaymentRequest__c/fields/PaymentDescription__c.field-meta.xml
<CustomField>
    <fullName>PaymentDescription__c</fullName>
    <label>PAYMENT DESCRIPTION</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>