force-app/main/default/objects/PaymentRequest__c/fields/PaymentDueDate__c.field-meta.xml
<CustomField>
    <fullName>PaymentDueDate__c</fullName>
    <label>PAYMENT DUE DATE</label>
    <type>Date</type>
</CustomField>