force-app/main/default/objects/PaymentRequest__c/fields/PaymentSourceCategory__c.field-meta.xml
<CustomField>
    <fullName>PaymentSourceCategory__c</fullName>
    <label>PAYMENT SOURCE CATEGORY</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PaymentSourceCategory</valueSetName>
    </valueSet>
</CustomField>