force-app/main/default/objects/PaymentRequest__c/fields/ProcessPayableLiquidation__c.field-meta.xml
<CustomField>
    <fullName>ProcessPayableLiquidation__c</fullName>
    <label>Process Payable-Liquidation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RECEIVABLE_PAYABLE_PROCESSING</valueSetName>
    </valueSet>
</CustomField>