force-app/main/default/objects/PaymentRequest__c/fields/ReceiptConfirmedTrxIn__c.field-meta.xml
<CustomField>
    <fullName>ReceiptConfirmedTrxIn__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Receipt Confirmed-Trx In</label>
    <type>Checkbox</type>
</CustomField>