force-app/main/default/objects/PaymentRequest__c/fields/RequestedDate__c.field-meta.xml
<CustomField>
    <fullName>RequestedDate__c</fullName>
    <label>REQUESTED DATE</label>
    <type>Date</type>
</CustomField>