force-app/main/default/objects/PaymentRequest__c/fields/RequesterAddress__c.field-meta.xml
<CustomField>
    <fullName>RequesterAddress__c</fullName>
    <label>REQUESTER ADDRESS</label>
    <type>TextArea</type>
</CustomField>