force-app/main/default/objects/PaymentRequest__c/fields/RequesterDepartment__c.field-meta.xml
<CustomField>
    <fullName>RequesterDepartment__c</fullName>
    <label>REQUESTER DEPARTMENT</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Department</valueSetName>
    </valueSet>
</CustomField>