force-app/main/default/objects/PaymentRequest__c/fields/ReturnedAmountLocal__c.field-meta.xml
<CustomField>
    <fullName>ReturnedAmountLocal__c</fullName>
    <label>Return Amount(Local)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>