force-app/main/default/objects/PaymentRequest__c/fields/RollupFMSUnpaidBalOfBuyingUSD__c.field-meta.xml
<CustomField>
    <fullName>RollupFMSUnpaidBalOfBuyingUSD__c</fullName>
    <label>ROLLUP FMS UNPAID BAL OF BUYING(USD)</label>
    <summarizedField>FMSBillPayReq__c.FMSUnpaidBalOfBuyingUSDPayReq__c</summarizedField>
    <summaryForeignKey>FMSBillPayReq__c.PaymentRequestID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>