force-app/main/default/objects/PaymentRequest__c/fields/RollupFMSUnreceivedBalOfSellLocal__c.field-meta.xml
<CustomField>
    <fullName>RollupFMSUnreceivedBalOfSellLocal__c</fullName>
    <label>ROLLUP FMS UNRECEIVED BAL SELLING(LOCAL)</label>
    <summarizedField>FMSBillPayReq__c.FMSUnreceivedBalOfSellingLocalTrx__c</summarizedField>
    <summaryFilterItems>
        <field>FMSBillPayReq__c.BillInvToSameTrxPlan__c</field>
        <operation>equals</operation>
        <value>1</value>
    </summaryFilterItems>
    <summaryForeignKey>FMSBillPayReq__c.PaymentRequestID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>