force-app/main/default/objects/PaymentRequest__c/fields/RollupKickbackUnpaidBalanceLocal__c.field-meta.xml
<CustomField>
    <fullName>RollupKickbackUnpaidBalanceLocal__c</fullName>
    <label>ROLLUP KICKBACK UNPAID BAL(LOCAL)</label>
    <summarizedField>KickbackPayReq__c.KickbackUnpaidBalanceLocalPayReq__c</summarizedField>
    <summaryForeignKey>KickbackPayReq__c.PaymentRequestID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>