force-app/main/default/objects/PaymentRequest__c/fields/RollupKickbackUnpaidBalanceUSD__c.field-meta.xml
<CustomField>
    <fullName>RollupKickbackUnpaidBalanceUSD__c</fullName>
    <label>ROLLUP KICKBACK UNPAID BAL(USD)</label>
    <summarizedField>KickbackPayReq__c.KickbackUnpaidBalanceUSDPayReq__c</summarizedField>
    <summaryForeignKey>KickbackPayReq__c.PaymentRequestID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>