force-app/main/default/objects/PaymentRequest__c/fields/RollupOtherUnpaidBalance__c.field-meta.xml
<CustomField>
    <fullName>RollupOtherUnpaidBalance__c</fullName>
    <label>ROLLUP OTHER UNPAID BAL</label>
    <summarizedField>OtherPayReq__c.UnpaidBalanceOfOtherPayReq__c</summarizedField>
    <summaryForeignKey>OtherPayReq__c.PaymentRequestID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>