force-app/main/default/objects/PaymentRequest__c/fields/RollupOtherUnreceivedBalance__c.field-meta.xml
<CustomField>
    <fullName>RollupOtherUnreceivedBalance__c</fullName>
    <label>ROLLUP OTHER UNRECEIVED BAL</label>
    <summarizedField>OtherPayReq__c.UnreceivedBalOfOtherTrx__c</summarizedField>
    <summaryForeignKey>OtherPayReq__c.PaymentRequestID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>