force-app/main/default/objects/PaymentRequest__c/fields/RollupPIUnpaidBalanceLocal__c.field-meta.xml
<CustomField>
    <fullName>RollupPIUnpaidBalanceLocal__c</fullName>
    <label>ROLLUP P/I UNPAID BAL(LOCAL)</label>
    <summarizedField>PurInvPayReq__c.UnpaidBalancePILocalPayReq__c</summarizedField>
    <summaryForeignKey>PurInvPayReq__c.PaymentRequestID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>