force-app/main/default/objects/PaymentRequest__c/fields/RollupTotalLoanRepayment__c.field-meta.xml
<CustomField>
    <fullName>RollupTotalLoanRepayment__c</fullName>
    <label>ROLLUP TOTAL LOAN REPAYMENT</label>
    <summarizedField>LoanPayPayReq__c.TotalAmountOfLoanRepaymentPayReq__c</summarizedField>
    <summaryForeignKey>LoanPayPayReq__c.PaymentRequestID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>