force-app/main/default/objects/PaymentRequest__c/fields/RollupWMSUnpaidBalOfBuyingLocal__c.field-meta.xml
<CustomField>
    <fullName>RollupWMSUnpaidBalOfBuyingLocal__c</fullName>
    <label>ROLLUP WMS UNPAID BAL OF BUYING(LOCAL)</label>
    <summarizedField>WMSBillPayReq__c.WMSUnpaidBalOfBuyingLocalPayReq__c</summarizedField>
    <summaryForeignKey>WMSBillPayReq__c.PaymentRequestID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>