force-app/main/default/objects/PaymentRequest__c/fields/RollupWMSUnpaidBalOfBuyingUSD__c.field-meta.xml
<CustomField>
    <fullName>RollupWMSUnpaidBalOfBuyingUSD__c</fullName>
    <label>ROLLUP WMS UNPAID BAL OF BUYING(USD)</label>
    <summarizedField>WMSBillPayReq__c.WMSUnpaidBalOfBuyingUSDPayReq__c</summarizedField>
    <summaryForeignKey>WMSBillPayReq__c.PaymentRequestID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>