force-app/main/default/objects/PaymentRequest__c/fields/RollupWMSUnreceivedBalOfSellUSD__c.field-meta.xml
<CustomField>
    <fullName>RollupWMSUnreceivedBalOfSellUSD__c</fullName>
    <label>ROLLUP WMS UNRECEIVED BAL SELLING(USD)</label>
    <summarizedField>WMSBillPayReq__c.WMSUnreceivedBalOfSellingUSDTrx__c</summarizedField>
    <summaryForeignKey>WMSBillPayReq__c.PaymentRequestID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>