force-app/main/default/objects/PaymentRequest__c/fields/RUOffsetProcessedBuyingAmountFCY__c.field-meta.xml
<CustomField>
    <fullName>RUOffsetProcessedBuyingAmountFCY__c</fullName>
    <label>Offset Processed Buying Amount(FCY)</label>
    <summarizedField>FMSBillPayReq__c.OffsetProcessedBuyingAmountFCY__c</summarizedField>
    <summaryForeignKey>FMSBillPayReq__c.PaymentRequestID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>