force-app/main/default/objects/PaymentRequest__c/fields/RUOffsetProcessedBuyingAmountLocal__c.field-meta.xml
<CustomField>
    <fullName>RUOffsetProcessedBuyingAmountLocal__c</fullName>
    <label>Offset Processed Buying Amount(Local)</label>
    <summarizedField>FMSBillPayReq__c.OffsetProcessedBuyingAmountLocal__c</summarizedField>
    <summaryForeignKey>FMSBillPayReq__c.PaymentRequestID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>