force-app/main/default/objects/PaymentRequest__c/fields/RUOffsetProcessedSellingAmountFCY__c.field-meta.xml
<CustomField>
    <fullName>RUOffsetProcessedSellingAmountFCY__c</fullName>
    <label>Offset Processed Selling Amount(FCY)</label>
    <summarizedField>FMSBillPayReq__c.OffsetProcessedSellingAmountFCY__c</summarizedField>
    <summaryForeignKey>FMSBillPayReq__c.PaymentRequestID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>