force-app/main/default/objects/PaymentRequest__c/fields/RUOffsetProcessedSellingAmountLocal__c.field-meta.xml
<CustomField>
    <fullName>RUOffsetProcessedSellingAmountLocal__c</fullName>
    <label>Offset Processed Selling Amount(Local)</label>
    <summarizedField>FMSBillPayReq__c.OffsetProcessedSellingAmountLocal__c</summarizedField>
    <summaryForeignKey>FMSBillPayReq__c.PaymentRequestID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>