force-app/main/default/objects/PaymentRequest__c/fields/ScheduledReturnDate__c.field-meta.xml
<CustomField>
    <fullName>ScheduledReturnDate__c</fullName>
    <label>SCHEDULED RETURN DATE</label>
    <type>Date</type>
</CustomField>