force-app/main/default/objects/PaymentRequest__c/fields/TransportType__c.field-meta.xml
<CustomField>
    <fullName>TransportType__c</fullName>
    <label>Transport Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TransportType</valueSetName>
    </valueSet>
</CustomField>