force-app/main/default/objects/PaymentRequest__c/fields/TrxPlanDifferenceLocal__c.field-meta.xml
<CustomField>
    <fullName>TrxPlanDifferenceLocal__c</fullName>
    <formula>AmountLocal__c - AmountAdvancedPaidLocal__c +  AdditionalAmountPay__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trx Plan Difference(Local)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>