force-app/main/default/objects/PaymentRequest__c/fields/UnpaidBalanceforPaymentFCY__c.field-meta.xml
<CustomField>
    <fullName>UnpaidBalanceforPaymentFCY__c</fullName>
    <formula>AmountUSD__c -  ActualAmountforPaymentFCY__c</formula>
    <label>Unpaid Balance for Payment(FCY)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>